test/spec/exception-handling/imports.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/proposals/exception-handling/imports.wast
;;; ARGS*: --enable-exceptions
(;; STDOUT ;;;
called host spectest.print_i32(i32:13) =>
called host spectest.print_i32_f32(i32:14, f32:42.000000) =>
called host spectest.print_i32(i32:13) =>
called host spectest.print_i32(i32:13) =>
called host spectest.print_f32(f32:13.000000) =>
called host spectest.print_i32(i32:13) =>
called host spectest.print_i64(i64:24) =>
called host spectest.print_f64_f64(f64:25.000000, f64:53.000000) =>
called host spectest.print_i64(i64:24) =>
called host spectest.print_f64(f64:24.000000) =>
called host spectest.print_f64(f64:24.000000) =>
called host spectest.print_f64(f64:24.000000) =>
out/test/spec/exception-handling/imports.wast:96: assert_invalid passed:
  out/test/spec/exception-handling/imports/imports.2.wasm:000001e: error: function type variable out of range: 1 (max 1)
  000001e: error: OnImportFunc callback failed
called host spectest.print_i32(i32:13) =>
out/test/spec/exception-handling/imports.wast:132: assert_unlinkable passed:
  error: invalid import "test.unknown"
out/test/spec/exception-handling/imports.wast:136: assert_unlinkable passed:
  error: invalid import "spectest.unknown"
out/test/spec/exception-handling/imports.wast:141: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:145: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:149: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:153: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:157: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:161: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:165: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:169: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:173: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:177: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:181: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:185: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:189: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:193: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:197: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:201: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:206: assert_unlinkable passed:
  error: expected import "test.global-i32" to have kind func, not global
out/test/spec/exception-handling/imports.wast:210: assert_unlinkable passed:
  error: expected import "test.table-10-inf" to have kind func, not table
out/test/spec/exception-handling/imports.wast:214: assert_unlinkable passed:
  error: expected import "test.memory-2-inf" to have kind func, not memory
out/test/spec/exception-handling/imports.wast:218: assert_unlinkable passed:
  error: expected import "test.tag" to have kind func, not tag
out/test/spec/exception-handling/imports.wast:222: assert_unlinkable passed:
  error: expected import "spectest.global_i32" to have kind func, not global
out/test/spec/exception-handling/imports.wast:226: assert_unlinkable passed:
  error: expected import "spectest.table" to have kind func, not table
out/test/spec/exception-handling/imports.wast:230: assert_unlinkable passed:
  error: expected import "spectest.memory" to have kind func, not memory
out/test/spec/exception-handling/imports.wast:235: assert_unlinkable passed:
  error: invalid import "test.unknown"
out/test/spec/exception-handling/imports.wast:239: assert_unlinkable passed:
  error: signature mismatch in imported tag
out/test/spec/exception-handling/imports.wast:243: assert_unlinkable passed:
  error: signature mismatch in imported tag
out/test/spec/exception-handling/imports.wast:247: assert_unlinkable passed:
  error: signature mismatch in imported tag
out/test/spec/exception-handling/imports.wast:251: assert_unlinkable passed:
  error: expected import "test.func-i32" to have kind tag, not func
out/test/spec/exception-handling/imports.wast:291: assert_unlinkable passed:
  error: invalid import "test.unknown"
out/test/spec/exception-handling/imports.wast:295: assert_unlinkable passed:
  error: invalid import "spectest.unknown"
out/test/spec/exception-handling/imports.wast:300: assert_unlinkable passed:
  error: type mismatch in imported global, expected i64 but got i32.
out/test/spec/exception-handling/imports.wast:304: assert_unlinkable passed:
  error: type mismatch in imported global, expected f32 but got i32.
out/test/spec/exception-handling/imports.wast:308: assert_unlinkable passed:
  error: type mismatch in imported global, expected f64 but got i32.
out/test/spec/exception-handling/imports.wast:312: assert_unlinkable passed:
  error: mutability mismatch in imported global, expected immutable but got mutable.
out/test/spec/exception-handling/imports.wast:316: assert_unlinkable passed:
  error: type mismatch in imported global, expected i32 but got f32.
out/test/spec/exception-handling/imports.wast:320: assert_unlinkable passed:
  error: type mismatch in imported global, expected i64 but got f32.
out/test/spec/exception-handling/imports.wast:324: assert_unlinkable passed:
  error: type mismatch in imported global, expected f64 but got f32.
out/test/spec/exception-handling/imports.wast:328: assert_unlinkable passed:
  error: mutability mismatch in imported global, expected immutable but got mutable.
out/test/spec/exception-handling/imports.wast:332: assert_unlinkable passed:
  error: type mismatch in imported global, expected i32 but got i64.
out/test/spec/exception-handling/imports.wast:336: assert_unlinkable passed:
  error: type mismatch in imported global, expected f32 but got i64.
out/test/spec/exception-handling/imports.wast:340: assert_unlinkable passed:
  error: type mismatch in imported global, expected f64 but got i64.
out/test/spec/exception-handling/imports.wast:344: assert_unlinkable passed:
  error: mutability mismatch in imported global, expected mutable but got immutable.
out/test/spec/exception-handling/imports.wast:349: assert_unlinkable passed:
  error: expected import "test.func" to have kind global, not func
out/test/spec/exception-handling/imports.wast:353: assert_unlinkable passed:
  error: expected import "test.table-10-inf" to have kind global, not table
out/test/spec/exception-handling/imports.wast:357: assert_unlinkable passed:
  error: expected import "test.memory-2-inf" to have kind global, not memory
out/test/spec/exception-handling/imports.wast:361: assert_unlinkable passed:
  error: expected import "spectest.print_i32" to have kind global, not func
out/test/spec/exception-handling/imports.wast:365: assert_unlinkable passed:
  error: expected import "spectest.table" to have kind global, not table
out/test/spec/exception-handling/imports.wast:369: assert_unlinkable passed:
  error: expected import "spectest.memory" to have kind global, not memory
out/test/spec/exception-handling/imports.wast:388: assert_trap passed: uninitialized table element
out/test/spec/exception-handling/imports.wast:391: assert_trap passed: uninitialized table element
out/test/spec/exception-handling/imports.wast:392: assert_trap passed: undefined table index
out/test/spec/exception-handling/imports.wast:407: assert_trap passed: uninitialized table element
out/test/spec/exception-handling/imports.wast:410: assert_trap passed: uninitialized table element
out/test/spec/exception-handling/imports.wast:411: assert_trap passed: undefined table index
out/test/spec/exception-handling/imports.wast:443: assert_unlinkable passed:
  error: invalid import "test.unknown"
out/test/spec/exception-handling/imports.wast:447: assert_unlinkable passed:
  error: invalid import "spectest.unknown"
out/test/spec/exception-handling/imports.wast:452: assert_unlinkable passed:
  error: actual size (10) smaller than declared (12)
out/test/spec/exception-handling/imports.wast:456: assert_unlinkable passed:
  error: max size (unspecified) larger than declared (20)
out/test/spec/exception-handling/imports.wast:460: assert_unlinkable passed:
  error: actual size (10) smaller than declared (12)
out/test/spec/exception-handling/imports.wast:464: assert_unlinkable passed:
  error: max size (20) larger than declared (18)
out/test/spec/exception-handling/imports.wast:468: assert_unlinkable passed:
  error: actual size (10) smaller than declared (12)
out/test/spec/exception-handling/imports.wast:472: assert_unlinkable passed:
  error: max size (20) larger than declared (15)
out/test/spec/exception-handling/imports.wast:477: assert_unlinkable passed:
  error: expected import "test.func" to have kind table, not func
out/test/spec/exception-handling/imports.wast:481: assert_unlinkable passed:
  error: expected import "test.global-i32" to have kind table, not global
out/test/spec/exception-handling/imports.wast:485: assert_unlinkable passed:
  error: expected import "test.memory-2-inf" to have kind table, not memory
out/test/spec/exception-handling/imports.wast:489: assert_unlinkable passed:
  error: expected import "spectest.print_i32" to have kind table, not func
out/test/spec/exception-handling/imports.wast:507: assert_trap passed: out of bounds memory access: access at 1000000+4 >= max value 65536
out/test/spec/exception-handling/imports.wast:518: assert_trap passed: out of bounds memory access: access at 1000000+4 >= max value 65536
out/test/spec/exception-handling/imports.wast:521: assert_invalid passed:
  out/test/spec/exception-handling/imports/imports.103.wasm:0000015: error: only one memory block allowed
  0000015: error: OnImportMemory callback failed
out/test/spec/exception-handling/imports.wast:525: assert_invalid passed:
  out/test/spec/exception-handling/imports/imports.104.wasm:0000015: error: only one memory block allowed
  0000015: error: OnMemory callback failed
out/test/spec/exception-handling/imports.wast:529: assert_invalid passed:
  out/test/spec/exception-handling/imports/imports.105.wasm:000000f: error: only one memory block allowed
  000000f: error: OnMemory callback failed
out/test/spec/exception-handling/imports.wast:544: assert_unlinkable passed:
  error: invalid import "test.unknown"
out/test/spec/exception-handling/imports.wast:548: assert_unlinkable passed:
  error: invalid import "spectest.unknown"
out/test/spec/exception-handling/imports.wast:553: assert_unlinkable passed:
  error: actual size (2) smaller than declared (3)
out/test/spec/exception-handling/imports.wast:557: assert_unlinkable passed:
  error: max size (unspecified) larger than declared (3)
out/test/spec/exception-handling/imports.wast:561: assert_unlinkable passed:
  error: actual size (1) smaller than declared (2)
out/test/spec/exception-handling/imports.wast:565: assert_unlinkable passed:
  error: max size (2) larger than declared (1)
out/test/spec/exception-handling/imports.wast:570: assert_unlinkable passed:
  error: expected import "test.func-i32" to have kind memory, not func
out/test/spec/exception-handling/imports.wast:574: assert_unlinkable passed:
  error: expected import "test.global-i32" to have kind memory, not global
out/test/spec/exception-handling/imports.wast:578: assert_unlinkable passed:
  error: expected import "test.table-10-inf" to have kind memory, not table
out/test/spec/exception-handling/imports.wast:582: assert_unlinkable passed:
  error: expected import "spectest.print_i32" to have kind memory, not func
out/test/spec/exception-handling/imports.wast:586: assert_unlinkable passed:
  error: expected import "spectest.global_i32" to have kind memory, not global
out/test/spec/exception-handling/imports.wast:590: assert_unlinkable passed:
  error: expected import "spectest.table" to have kind memory, not table
out/test/spec/exception-handling/imports.wast:595: assert_unlinkable passed:
  error: actual size (1) smaller than declared (2)
out/test/spec/exception-handling/imports.wast:599: assert_unlinkable passed:
  error: max size (2) larger than declared (1)
out/test/spec/exception-handling/imports.wast:637: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.133.wat:1:9: error: imports must occur before all non-import definitions
  (func) (import "" "" (func))
          ^^^^^^
out/test/spec/exception-handling/imports.wast:641: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.134.wat:1:9: error: imports must occur before all non-import definitions
  (func) (import "" "" (global i64))
          ^^^^^^
out/test/spec/exception-handling/imports.wast:645: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.135.wat:1:9: error: imports must occur before all non-import definitions
  (func) (import "" "" (table 0 funcref))
          ^^^^^^
out/test/spec/exception-handling/imports.wast:649: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.136.wat:1:9: error: imports must occur before all non-import definitions
  (func) (import "" "" (memory 0))
          ^^^^^^
out/test/spec/exception-handling/imports.wast:654: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.137.wat:1:29: error: imports must occur before all non-import definitions
  (global i64 (i64.const 0)) (import "" "" (func))
                              ^^^^^^
out/test/spec/exception-handling/imports.wast:658: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.138.wat:1:29: error: imports must occur before all non-import definitions
  (global i64 (i64.const 0)) (import "" "" (global f32))
                              ^^^^^^
out/test/spec/exception-handling/imports.wast:662: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.139.wat:1:29: error: imports must occur before all non-import definitions
  (global i64 (i64.const 0)) (import "" "" (table 0 funcref))
                              ^^^^^^
out/test/spec/exception-handling/imports.wast:666: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.140.wat:1:29: error: imports must occur before all non-import definitions
  (global i64 (i64.const 0)) (import "" "" (memory 0))
                              ^^^^^^
out/test/spec/exception-handling/imports.wast:671: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.141.wat:1:20: error: imports must occur before all non-import definitions
  (table 0 funcref) (import "" "" (func))
                     ^^^^^^
out/test/spec/exception-handling/imports.wast:675: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.142.wat:1:20: error: imports must occur before all non-import definitions
  (table 0 funcref) (import "" "" (global i32))
                     ^^^^^^
out/test/spec/exception-handling/imports.wast:679: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.143.wat:1:20: error: imports must occur before all non-import definitions
  (table 0 funcref) (import "" "" (table 0 funcref))
                     ^^^^^^
out/test/spec/exception-handling/imports.wast:683: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.144.wat:1:20: error: imports must occur before all non-import definitions
  (table 0 funcref) (import "" "" (memory 0))
                     ^^^^^^
out/test/spec/exception-handling/imports.wast:688: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.145.wat:1:13: error: imports must occur before all non-import definitions
  (memory 0) (import "" "" (func))
              ^^^^^^
out/test/spec/exception-handling/imports.wast:692: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.146.wat:1:13: error: imports must occur before all non-import definitions
  (memory 0) (import "" "" (global i32))
              ^^^^^^
out/test/spec/exception-handling/imports.wast:696: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.147.wat:1:13: error: imports must occur before all non-import definitions
  (memory 0) (import "" "" (table 1 3 funcref))
              ^^^^^^
out/test/spec/exception-handling/imports.wast:700: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.148.wat:1:13: error: imports must occur before all non-import definitions
  (memory 0) (import "" "" (memory 1 2))
              ^^^^^^
out/test/spec/exception-handling/imports.wast:710: assert_unlinkable passed:
  error: invalid import "not wasm.overloaded"
188/188 tests passed.
;;; STDOUT ;;)
